drone/drone-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drone-server
  namespace: drone
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: drone.namth.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drone-server
                port:
                  number: 80
